# GRNsuite

./: .gitignore  01_demo_peakfinder_walkthrough.ipynb  01_peakfinder_loop.ipynb  02_burst_detection_loop.ipynb  README.md  demo_peakfinder.ipynb  demo_spikesort.ipynb  demo_spikesort_loop.ipynb  demo_workflows.ipynb  notebook.ipynb  parameters.yaml  pyproject.toml  requirements.txt  setup.py
data/: 20231103-M04-sucr-100-Gal-A2-02.txt  20231103-M05-sucr-100-Gal-A1-02.txt  20231106-F02-sucr-100-Gal-A2-02.txt  20231106-M01-sucr-100-Gal-A2-02.txt
grnsuite/: README.md  burst_detection.py  cli.py  io.py  preprocessing.py  spike_detection.py  spike_sorting.py  utils.py
results/20231103-M04-sucr-100-Gal-A1-02/: detected_spikes.csv  metadata.json  processed_data.csv  sorted_spikes.csv  unit_averages.csv  waveforms.csv
results/20231103-M04-sucr-100-Gal-A2-02/: detected_spikes.csv  metadata.json  processed_data.csv  sorted_spikes.csv  unit_averages.csv  waveforms.csv
results/20231103-M05-sucr-100-Gal-A1-02/: detected_spikes.csv  interactive_processed.csv  metadata.json  processed_data.csv  sorted_spikes.csv  unit_averages.csv  waveforms.csv
results/20231103-M05-sucr-100-Gal-A2-01/: detected_spikes.csv  metadata.json  processed_data.csv  sorted_spikes.csv  unit_averages.csv  waveforms.csv
results/20231103-M05-sucr-100-Gal-A3-02/: detected_spikes.csv  metadata.json  processed_data.csv  sorted_spikes.csv  unit_averages.csv  waveforms.csv
results/20231106-F02-sucr-100-Gal-A2-02/: metadata.json  (+6 more)
tests/: test_spike_detection.py
workflow/: Snakefile
workflows/: Snakefile
(+22 files in other folders)
