[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grnsuite"
version = "0.1.0"
description = "A package for analyzing insect taste electrophysiology recordings"
authors = [{name = "Rachel H. Parkinson", email = "r4chelp@gmail.com"}]
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "scikit-learn",
    "click",
    "pytest",
    "snakemake"
]

[project.scripts]
grnsuite = "grnsuite.cli:cli"

[tool.setuptools]
packages = ["grnsuite"]